# datagen

./: CMakeLists.txt  CMakePresets.json  Justfile  Readme  enum.data
src/: datagen.cpp
src/core/: arena.cpp  arena.h  base.cpp  base.h  core.h  macro.h  string.cpp  string.h
src/os/: memory.h  os.h
src/os/linux/: memory.cpp
